<resources>
    <string name="app_name">Parish register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Parish register</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="default_error_message">Something went wrong!</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>

    <string name="menu_register">@string/app_name</string>
    <string name="menu_dashboard">@string/dashboard</string>
    <string name="menu_inspector">@string/inspector</string>
    <string name="menu_settings">@string/settings</string>

    <string name="parish">Parish</string>
    <string name="register">Register</string>

    <string name="born">Born: %1$s</string>
    <string name="marriage">Marriage: %1$s</string>
    <string name="died">Died: %1$s</string>

    <string name="groom">Groom:</string>
    <string name="bride">Bride:</string>
    <string name="parents">Parents: %1$s</string>
    <string name="godparents">Godparents: %1$s</string>
    <string name="witnesses_of_groom">Witnesses of the groom: %1$s</string>
    <string name="witnesses_of_bride">Witnesses of the bride: %1$s</string>
    <string name="witnesses">Witnesses: %1$s</string>

    <!--Filter-->
    <string name="filter">Filter</string>
    <string name="filter_all">All</string>
    <string name="filter_born">Born</string>
    <string name="filter_marriages">Marriages</string>
    <string name="filter_died">Died</string>
    <string name="period">Period</string>
    <string name="sorting">Sorting</string>
    <string name="sorting_by_date_asc">By date ascending</string>
    <string name="sorting_by_date_desc">By date descending</string>
    <string name="sorting_by_name">By name</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="reset_filters_dialog_message">Are you sure you want to reset all filters?</string>
    <string name="no_records_found">No records found</string>
    <string name="adjust_filters_and_try_again">Adjust the filters and try again</string>

    <!--Dashboard-->
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_born">Born:\n%1$d</string>
    <string name="dashboard_marriages">Marriages:\n%1$d</string>
    <string name="dashboard_died">Died:\n%1$d</string>

    <!--Inspector-->
    <string name="inspector">Inspector</string>
    <string name="possible_duplicates_format">Possible Duplicates (%1$d)</string>
    <string name="fund_format">Fund: %1$s. Inventory: %2$s. Case: %3$s. Page: %4$s</string>

    <!--Settings-->
    <string name="settings">Settings</string>
</resources>